--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: corisande;
 }
 
 body {
@@ -23,7 +24,8 @@ body {
 }
 
 .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://iamosahan.com/wrapbootstrap-pillarix/flowersx/img/hero2.jpeg');
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://iamosahan.com/wrapbootstrap-pillarix/flowersx/img/hero2.jpeg'); */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('./images/background-3.jpg');
     background-size: cover;
     background-position: bottom;
     color: #fff;
@@ -36,15 +38,26 @@ body {
 
 .hero h1 span {
     color: #f1c40f;
+    font-weight: bold;
 }
 
 .hero p {
-    font-size: 1rem;
+    font-size: 25px;
     margin-top: 1rem;
 }
 
 .herobtn {
     border-radius: 20px;
+    border-radius: 20px;
+    background-color: #a086d2;
+    border: 1px solid #a086d2;
+    padding: 12px 24px;
+    font-size: 1.1rem;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
 }
 
 .herosct {
@@ -52,7 +65,8 @@ body {
 }
 
 em {
-    font-family: 'IBM Plex Serif', serif;
+    /* font-family: 'IBM Plex Serif', serif; */
+    font-family: corisande;
 }
 
 body {
@@ -60,11 +74,11 @@ body {
 }
 
 .about {
-    background-image: linear-gradient(rgba(46, 78, 42, 0.4), rgba(46, 78, 42, 0.4)), url(./Lilac-Pattern-01.jpg);
+    /* background-image: linear-gradient(rgba(46, 78, 42, 0.4), rgba(46, 78, 42, 0.4)), url(./images/Lilac-Pattern-01.jpg); */
     background-position: center;
     background-repeat: repeat-x;
     background-size: contain;
-    color: #fff;
+    color: black;
     padding-bottom: 5%;
 }
 
@@ -78,7 +92,8 @@ body {
 }
 
 .card-body {
-    background-color: #871d82;
+    /* background-color: #871d82; */
+    background-color: #a086d2;
     border: none;
 }
 
@@ -112,7 +127,7 @@ body {
 
 .semi-title {
     text-align: center;
-    color: #6c757d;
+    color: black;
     font-size: 1.5rem;
     margin-bottom: 1rem;
 }
