--- a/assets/style.css
+++ b/assets/style.css
@@ -149,10 +149,10 @@ body {
     transition: background-color 0.3s, transform 0.2s;
     margin-top: 10px;  */
 
-    border: 2px solid #198754;
+    /* border: 2px solid #198754; */
     color: white;
     font-weight: bold;
-    background-color: transparent;
+    /* background-color: transparent; */
     padding: 10px 20px;
     border-radius: 50px;
     transition: background-color 0.3s ease, color 0.3s ease;
