--- a/assets/style.css
+++ b/assets/style.css
@@ -436,7 +436,7 @@ body {
 }
 
 .newsletter {
-    background-image: url('https://iamosahan.com/wrapbootstrap-pillarix/flowersx/img/hero2.jpeg'); /* Replace with your image */
+    background-image: url(../assets/images/hero.jpeg);
     background-size: cover;
     background-position: center;
     padding: 80px 0;
